{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 541,
  "lineage": "b7702f1f-7f25-2c0f-c857-71e4f5650c49",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "xport-load-balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:335810010920:loadbalancer/xport-load-balancer",
            "availability_zones": [
              "us-east-2a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "xport-load-balancer-788458643.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 5,
                "interval": 30,
                "target": "HTTP:8080/",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "xport-load-balancer",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 8080,
                "lb_protocol": "http"
              }
            ],
            "name": "xport-load-balancer",
            "security_groups": [
              "sg-0d22ddd03b9047bd1"
            ],
            "source_security_group": "335810010920/xport_sg_public_subnet",
            "source_security_group_id": "sg-0d22ddd03b9047bd1",
            "subnets": [
              "subnet-0a3b3d8db8efd5924"
            ],
            "tags": {
              "Name": "xport_web_server_lb"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "depends_on": [
            "aws_security_group.xport_sg_public_subnet",
            "aws_subnet.xport_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "xport_app_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5d9d301c853a04a",
            "arn": "arn:aws:ec2:us-east-2:335810010920:instance/i-0afe85faad4c3e6e6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0afe85faad4c3e6e6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "xport_key_pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-09c5f39fc933ce99b",
            "private_dns": "ip-10-0-1-43.us-east-2.compute.internal",
            "private_ip": "10.0.1.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-057208e269bdf1b86",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d4d46dd3cc503edc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a3b3d8db8efd5924",
            "tags": {
              "Name": "App Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d4d46dd3cc503edc"
            ]
          },
          "depends_on": [
            "aws_key_pair.xport_key_pair",
            "aws_security_group.xport_sg_public_app_subnet",
            "aws_subnet.xport_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "xport_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-08b472bcd34d810dd",
            "owner_id": "335810010920",
            "vpc_id": "vpc-0380081f5c8557f0e"
          },
          "depends_on": [
            "aws_vpc.xport_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "xport_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02c46b112f3e888b7",
            "owner_id": "335810010920",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08b472bcd34d810dd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0380081f5c8557f0e"
          },
          "depends_on": [
            "aws_internet_gateway.xport_internet_gateway",
            "aws_vpc.xport_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "xport_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032ecda46a6d8da25",
            "route_table_id": "rtb-02c46b112f3e888b7",
            "subnet_id": "subnet-0a3b3d8db8efd5924"
          },
          "depends_on": [
            "aws_route_table.xport_public_rt",
            "aws_subnet.xport_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "xport_sg_private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335810010920:security-group/sg-07a3fb9d4b3aad37f",
            "description": "DB Security Group",
            "egress": [],
            "id": "sg-07a3fb9d4b3aad37f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 9043,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9043
              }
            ],
            "name": "xport_sg_private_subnet",
            "name_prefix": null,
            "owner_id": "335810010920",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0380081f5c8557f0e"
          },
          "depends_on": [
            "aws_vpc.xport_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "xport_sg_public_app_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335810010920:security-group/sg-0d4d46dd3cc503edc",
            "description": "APP Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4d46dd3cc503edc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9043,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9043
              }
            ],
            "name": "xport_sg_public_app_subnet",
            "name_prefix": null,
            "owner_id": "335810010920",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0380081f5c8557f0e"
          },
          "depends_on": [
            "aws_vpc.xport_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "xport_sg_public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335810010920:security-group/sg-0d22ddd03b9047bd1",
            "description": "Web Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d22ddd03b9047bd1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "xport_sg_public_subnet",
            "name_prefix": null,
            "owner_id": "335810010920",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0380081f5c8557f0e"
          },
          "depends_on": [
            "aws_vpc.xport_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "xport_private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335810010920:subnet/subnet-0c4a35e24eef5d0c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c4a35e24eef5d0c4",
            "map_public_ip_on_launch": false,
            "owner_id": "335810010920",
            "vpc_id": "vpc-0380081f5c8557f0e"
          },
          "depends_on": [
            "aws_vpc.xport_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "xport_public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335810010920:subnet/subnet-0a3b3d8db8efd5924",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a3b3d8db8efd5924",
            "map_public_ip_on_launch": false,
            "owner_id": "335810010920",
            "vpc_id": "vpc-0380081f5c8557f0e"
          },
          "depends_on": [
            "aws_vpc.xport_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "xport_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335810010920:vpc/vpc-0380081f5c8557f0e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0be44e6fc736597dd",
            "default_route_table_id": "rtb-0373d94e21787ccb4",
            "default_security_group_id": "sg-07d1fe9aa63da14a0",
            "dhcp_options_id": "dopt-79af6512",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0380081f5c8557f0e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0373d94e21787ccb4",
            "owner_id": "335810010920",
            "tags": {
              "Name": "xport_vpc"
            }
          }
        }
      ]
    }
  ]
}